Fixed small typos Data Source
Fixed small typos in data source page

--- a/02-data.Rmd
+++ b/02-data.Rmd
@@ -7,7 +7,7 @@ Then we use the name we got to scrape detailed information that we need.  The sc
 ![fig 1](./data_image/info1.png) 
 ![fig 2](./data_image/info2.png)
 
-The way we scraped data was that we restrict the region into Manhattan area so that most restaurants will appear in the health inspection data. Since there are 3 pages of restaurants, we used url to do page indexing. Then we constructed a loop with page numbers. In side this loop we have a nested loop that use the restaurant names we got froim this page to modify the url. We did some regex on the names so that they can fit the way opentable use them. For each column we append each value into a list. After we finish the nested loop, we will combine all the lists we have into our final dataset. Following is the code for our scaping script:
+The way we scraped data was that we restrict the region into Manhattan area so that most restaurants will appear in the health inspection data. Since there are 3 pages of restaurants, we used url to do page indexing. Then we constructed a loop with page numbers. In side this loop we have a nested loop that use the restaurant names we got froim this page to modify the url. We did some regex on the names so that they can fit the way opentable use them. For each column we append each value into a list. After we finish the nested loop, we will combine all the lists we have into our final dataset. The following is the code for our scaping script:
 ```{r eval=FALSE}
 library(rvest)
 library(stringr)
@@ -112,4 +112,4 @@ write.csv(opentable_data, "./opentable.csv")
 
 ```
 
-There is not scraping process for our inspection data. The data contains grade, score, date of the inspection, violation description and the restaurant name. Our further task is to join these two datasets, and explore some interesting relationship between these two. 
+There is no scraping process for our inspection data. The data contains grade, score, date of the inspection, violation description and the restaurant name. Our further task is to join these two datasets, and explore some interesting relationship between these two. 
